tests/variables/errors/change_const_value.c.res
[36mERROR: Cannot assign value to a constant[0m [4min line 4
[0m    n = 1;
    ^
[36mERROR: Cannot assign value to a constant[0m [4min line 5
[0m    n = 1 + 1;
    ^
[1m[31mCompilation failed with 2 errors
[0m